[tool.poetry]
name = "seamless-loop"
version = "0.1.0"
description = ""
authors = ["Alex-Merrill <aomerrill98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
opencv-python = "^4.9.0.80"


[tool.poetry.group.dev.dependencies]
ipython = "^8.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
